[package]
name = "egui-sdl2"
version = "0.2.2"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]
description = "egui + SDL2: event handling and rendering via OpenGL or Canvas "
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mxmgorin/egui-sdl2"
homepage = "https://github.com/mxmgorin/egui-sdl2"
keywords = ["sdl2", "egui", "gui", "gamedev"]
categories = ["gui"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[features]
default = ["links", "glow-backend", "canvas-backend", "wgpu-backend"]
# Enable rendering via glow
glow-backend = ["glow", "egui_glow"]
# Enable rendering via canvas
canvas-backend = ["sdl2-sys", "bytemuck", "egui/bytemuck", "sdl2/unsafe_textures"]
# Enable rendering via canvas
wgpu-backend = ["egui-wgpu", "web-time", "sdl2/raw-window-handle"]
# Enable opening links in a browser when an egui hyperlink is clicked.
links = ["webbrowser"]
# Forward sdl2 features
sdl2-gfx = ["sdl2/gfx"]
sdl2-image = ["sdl2/image"]
sdl2-mixer = ["sdl2/mixer"]
sdl2-ttf = ["sdl2/ttf"]
sdl2-raw-window-handle = ["sdl2/raw-window-handle"]
sdl2-unsafe_textures = ["sdl2/unsafe_textures"]
sdl2-use-bindgen = ["sdl2/use-bindgen"]
sdl2-use-vcpkg = ["sdl2/use-vcpkg"]
sdl2-use-pkgconfig = ["sdl2/use-pkgconfig"]
sdl2-static-link = ["sdl2/static-link"]
sdl2-use_mac_framework = ["sdl2/use_mac_framework"]
sdl2-use_ios_framework = ["sdl2/use_ios_framework"]
sdl2-bundled = ["sdl2/bundled"]

[dependencies]
log = "0.4.28"
sdl2 = { version = "0.38.0", default-features = false }
egui = "0.32.3"
webbrowser = { version = "1.0.5", optional = true }
# glow-backend:
glow = { version = "0.16.0", optional = true }
egui_glow = { version = "0.32.3", optional = true }
# canvas-backend:
sdl2-sys = {version = "0.38", optional = true }
bytemuck = { version = "1.23.2", optional = true }
# wgpu-backend:
egui-wgpu = { version = "0.32.3", optional = true }
web-time = { version = "1.1.0", optional = true }

[dev-dependencies]
pollster = { version = "0.4.0" }
